--- a/Integrated Presenter/MediaPlayer2.xaml
+++ b/Integrated Presenter/MediaPlayer2.xaml
@@ -21,6 +21,7 @@
             </StackPanel>
         </Viewbox>
         <Rectangle Name="ActionIndicator" Fill="Orange" Panel.ZIndex="10" Height="50" VerticalAlignment="Top"></Rectangle>
+        <Image Grid.Row="1" Name="MuteIcon" Width="70" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="5" Panel.ZIndex="100" Source="pack://application:,,,/Icons/Mute2.png" Visibility="Visible"></Image>
         <Grid Panel.ZIndex="11">
             <TextBlock Margin="10" Name="SeqType" Foreground="White" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="30" FontWeight="Bold">SEQ</TextBlock>
             <Viewbox VerticalAlignment="Center">
